# projeto_inicial

./: README.md  READMED.md  arquivo.sql  main.py
git-github/: README.md  arquivo.sql  arquivo.yml  file3.yml  main.py
projeto_inicial/: anotacoes.txt
projeto_inicial/projeto_django/: pyproject.toml
