[tool.poetry]
name = "projeto-django"
version = "0.1.0"
description = ""
authors = ["Desenvolvimento <gabriel.ferreirat218@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
